force-app/main/default/objects/ShipmentDetail__c/ShipmentDetail__c.object-meta.xml
<CustomObject>
    <description>SOX object - Used to store supplier ASN for the items that are going to be shipped to the customer location</description>
    <label>Shipment Detail</label>
    <nameField>
        <displayFormat>SD-{00000}</displayFormat>
        <label>Shipment Detail #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipment Details</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>