force-app/main/default/objects/ShipmentDetail__c/fields/ContractManufacturer__c.field-meta.xml
<CustomField>
    <fullName>ContractManufacturer__c</fullName>
    <label>Contract Manufacturer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ContractManufacturer</valueSetName>
    </valueSet>
</CustomField>