force-app/main/default/objects/ShipmentDetail__c/fields/HW_SerialNumber__c.field-meta.xml
<CustomField>
    <fullName>HW_SerialNumber__c</fullName>
    <label>H/W Serial Number</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>