force-app/main/default/objects/ShipmentDetail__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Used by internal OM team to capture transaction details that can be used for future reference</description>
    <label>Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>