force-app/main/default/objects/ShipmentDetail__c/fields/OrderItemIds__c.field-meta.xml
<CustomField>
    <fullName>OrderItemIds__c</fullName>
    <label>Order Item Ids</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>