force-app/main/default/objects/ShipmentDetail__c/fields/Parent_Shipment_Detail__c.field-meta.xml
<CustomField>
    <fullName>Parent_Shipment_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Shipment Detail</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ShipmentDetail__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Overview</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ShipmentDetail__c</referenceTo>
    <relationshipLabel>Shipment Details</relationshipLabel>
    <relationshipName>Shipment_Details</relationshipName>
    <type>Lookup</type>
</CustomField>