force-app/main/default/objects/ShipmentDetail__c/fields/ProcessHistory__c.field-meta.xml
<CustomField>
    <fullName>ProcessHistory__c</fullName>
    <description>To capture the success and failed recs</description>
    <label>Process History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>