force-app/main/default/objects/ShipmentDetail__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Spare</fullName>
            </value>
            <value>
                <fullName>Accessory</fullName>
            </value>
            <value>
                <fullName>Appliance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>