force-app/main/default/objects/ShipmentDetail__c/fields/Quote_Item_Ids__c.field-meta.xml
<CustomField>
    <fullName>Quote_Item_Ids__c</fullName>
    <label>Quote Item Ids</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>