force-app/main/default/objects/ShipmentDetail__c/fields/Quote_MissingShipmentDetails__c.field-meta.xml
<CustomField>
    <fullName>Quote_MissingShipmentDetails__c</fullName>
    <label>Quote Missing Shipment Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>