force-app/main/default/objects/ShipmentDetail__c/fields/Quote_ShipmentValidation__c.field-meta.xml
<CustomField>
    <fullName>Quote_ShipmentValidation__c</fullName>
    <label>Quote Shipment Validation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NA</fullName>
                <default>true</default>
                <label>NA</label>
            </value>
            <value>
                <fullName>Required</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Internal Failure</fullName>
            </value>
            <value>
                <fullName>Start</fullName>
                <label>Start (Without Email)</label>
            </value>
            <value>
                <fullName>Start with Email</fullName>
                <label>Start and send Email</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>