force-app/main/default/objects/ShipmentDetail__c/fields/QuoteNumber__c.field-meta.xml
<CustomField>
    <fullName>QuoteNumber__c</fullName>
    <label>Quote #</label>
    <length>99</length>
    <type>Text</type>
</CustomField>