force-app/main/default/objects/ShipmentDetail__c/fields/SalesOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>SalesOrderNumber__c</fullName>
    <label>Sales Order #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>