force-app/main/default/objects/ShipmentDetail__c/fields/ShippedDate__c.field-meta.xml
<CustomField>
    <fullName>ShippedDate__c</fullName>
    <label>Shipped Date</label>
    <length>18</length>
    <type>Text</type>
</CustomField>