force-app/main/default/objects/ShipmentDetail__c/fields/TrackingNumber__c.field-meta.xml
<CustomField>
    <fullName>TrackingNumber__c</fullName>
    <label>Tracking #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>