force-app/main/default/objects/ShipmentDetail__c/recordTypes/Overview.recordType-meta.xml
<RecordType>
    <fullName>Overview</fullName>
    <active>true</active>
    <label>Overview</label>
</RecordType>