force-app/main/default/objects/ShipmentDetail__c/recordTypes/Shipment_Information.recordType-meta.xml
<RecordType>
    <fullName>Shipment_Information</fullName>
    <active>true</active>
    <label>Shipment Information</label>
</RecordType>