force-app/main/default/objects/ShipmentDetail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>QuoteNumber__c</columns>
    <columns>ProductName__c</columns>
    <columns>HW_SerialNumber__c</columns>
    <columns>ProcessHistory__c</columns>
    <columns>SalesOrderNumber__c</columns>
    <columns>ContractManufacturer__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>