force-app/main/default/objects/ShipmentDetail__c/listViews/Non_Order_ASN.listView-meta.xml
<ListView>
    <fullName>Non_Order_ASN</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>QuoteNumber__c</columns>
    <columns>Quantity__c</columns>
    <columns>ProductName__c</columns>
    <columns>ProcessHistory__c</columns>
    <columns>ShippedDate__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SalesOrderNumber__c</field>
        <operation>equals</operation>
        <value>SPARES</value>
    </filters>
    <filters>
        <field>SalesOrderNumber__c</field>
        <operation>equals</operation>
    </filters>
    <label>Non-Order ASN</label>
</ListView>